0.1.1 added header gradient for video and fixed z-index

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,3 +49,7 @@
 #header-menu {
   width: 100%;
 }
+
+.header-wrapper {
+  z-index: 4;
+}
